# QuadC

./: CMakeLists.txt  README.md  modifiers.txt
Quirkfile/: cap.qrk  dave.qrk  feferi.qrk  gamzee.qrk  input.txt  nepeta.qrk  terezi.qrk  thicc.qrk
src/: cmd_line.cpp  cmd_line.h  color.cpp  color.h  color.hpp  dialog.cpp  dialog.h  dialog.rc  main.c  main.cpp  quirk.cpp  quirk.hpp  resource.h
